# TMLSpeaker

./: .gitmodules  CMakeLists - Copy.txt  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig - Copy  sdkconfig.default  sdkconfig.working
Brand-Guide-and-Logos-English/Auracast Logos/Auracast_CM/Digital/AI/: Auracast_CM_Black.ai  Auracast_CM_Black_Tag.ai  Auracast_CM_Color.ai  Auracast_CM_Color_Tag.ai  Auracast_CM_White.ai  Auracast_CM_White_Tag.ai
Brand-Guide-and-Logos-English/Auracast Logos/Auracast_CM/Digital/EPS/: Auracast_CM_Black.eps  Auracast_CM_Black_Tag.eps  Auracast_CM_Color.eps  Auracast_CM_Color_Tag.eps  Auracast_CM_White.eps  Auracast_CM_White_Tag.eps
Brand-Guide-and-Logos-English/Auracast Logos/Auracast_CM/Print/AI/: Auracast_CM_Black.ai  Auracast_CM_Black_Tag.ai  Auracast_CM_Color.ai  Auracast_CM_Color_Tag.ai  Auracast_CM_White.ai  Auracast_CM_White_Tag.ai
Brand-Guide-and-Logos-English/Auracast Logos/Auracast_CM/Print/EPS/: Auracast_CM_Black.eps  Auracast_CM_Black_Tag.eps  Auracast_CM_Color.eps  Auracast_CM_Color_Tag.eps  (+2 more)
Brand-Guide-and-Logos-English/Bluetooth Logos/Logos for Print Use/: Bluetooth_CM_Black.eps  Bluetooth_CM_ColorBlack.eps  Bluetooth_CM_ColorWhite.eps  Bluetooth_CM_White.eps  Bluetooth_FM_Black.eps  Bluetooth_FM_Color.eps  Bluetooth_FM_White.eps
components/lvgl/env_support/cmake/: esp.cmake
components/lvgl_esp32_drivers/lvgl_tft/: st7735s.c
main/: CMakeLists.txt  audio_jack.c  audio_jack2.c  audio_jack3.c  audio_jack4.c  bt_app_av.c  bt_app_av.h  bt_app_core.c  img_audio_jack1.c  img_bt_logo.c  main.c
(+12 files in other folders)
